fix: removed unused statements, imports and eq function